# argo

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: main.yml  publish.yml
src/: argo.rs  lib.rs
tests/: test_parse.rs
