[package]
name = "argo-crds"
version = "0.1.0"
edition = "2021"
description = "Structs and tools for Argo's CRDs"
license = "MIT"

[dependencies]
schemafy = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.17"

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
